# LogParser

./: .gitignore  LICENSE  README.md  generate_sample_logs.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
log_parser/: __init__.py  analyzer.py  cli.py  dashboard.py  parser.py
scripts/: generate_screenshots.py
tests/: conftest.py  test_analyzer.py  test_parser.py
