[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logparser"
version = "1.0.0"
description = "Apache/Nginx access log analyser with a rich terminal dashboard — Built by Claude (Anthropic)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["log", "apache", "nginx", "access-log", "cli", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Log Analysis",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.scripts]
logparser = "log_parser.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["log_parser"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.hatch.build.targets.wheel]
packages = ["log_parser"]
